bk_ida/gccida/c1/assemble_zeros
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/assemble_zeros/src/varasm.c:1759:40: error: use of undeclared identifier 'off_6E2E28'
fprintf( asm_out_file, ( const char *)&off_6E2E28 + 4, "\t.zero\t", ( unsigned int)size); 
                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/assemble_zeros/src/obj/varasm.o] Error 1
